--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="overview">
 
 <section>
-  <p><b>Stack</b> is a presentation library<br> with scroll-based navigation.
+  <p><b>Stacks</b> is a presentation library<br> with scroll-based navigation.
   <p class="grey">Scroll down to continue.
 </section>
 
